# easyhtmlreport

./: .gitignore  LICENSE  README.md  setup.cfg
easyhtmlreport/: __init__.py
easyhtmlreport/assets/: index.html
easyhtmlreport/assets/css/: jquery-image-player-min.css
easyhtmlreport/assets/js/: jquery-image-player-min.js
tests/: test_report.py
